--- a/src/components/DataTable/cells/SelectionCell/SelectionCell.module.css
+++ b/src/components/DataTable/cells/SelectionCell/SelectionCell.module.css
@@ -6,9 +6,8 @@
 .selectionCell {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   padding: 0;
-  padding-left: 4px;
   width: 100%;
   height: 100%;
 }
